SCRUM-4072 make download button work